# yamr

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  email_generator.py  version.h.in
docs/: Doxyfile.in  README.md  hw_assignment.md
include/: filedivider.h  filesystemops.h  logger.h  mapemailaddress.h  maprunner.h  reducerunner.h  scheduler.h  singleton.h  trie.h
src/: filedivider.cpp  filesystemops.cpp  logger.cpp  main.cpp  mapemailaddress.cpp  maprunner.cpp  reducerunner.cpp  scheduler.cpp  test_version.cpp
